[package]
name = "piko"
version = "0.1.0"
authors = ["Lyuben Todorov <lyuben.todorov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
config = "0.10.1"
glob = "0.3.0"
rayon = "1.3.1"
bit-vec = "0.6.2"
sha2 = "0.9.1"
byteorder = "1.3.4"
bytes = "0.5.6"
num = "0.3.0"
num-traits = "0.2.12"
num-derive = "0.3.1"
serde = { version = "1.0.115", features = ["derive"] }
serde_cbor = "0.11.1"
